hphp/hack/test/typecheck/new_inference/transitive_error.php.exp
File "transitive_error.php", line 28, characters 11-12:
Invalid argument (Typing[4110])
  File "transitive_error.php", line 18, characters 18-18:
  This is an object of type D
  File "transitive_error.php", line 21, characters 17-17:
  It is incompatible with an object of type C
